--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -29,6 +29,8 @@ dependencies {
     // Remove the next line if you don't want to depend on the API
     // modApi "dev.architectury:architectury-forge:${rootProject.architectury_version}"
 
+    modImplementation "curse.maven:forgeconfigapiport-547434:3671141"
+
     common(project(path: ":common", configuration: "namedElements")) { transitive false }
     shadowCommon(project(path: ":common", configuration: "transformProductionForge")) { transitive = false }
 }
@@ -82,5 +84,9 @@ publishing {
     // See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
     repositories {
         // Add repositories to publish to here.
+        maven {
+            name = 'Curse Maven'
+            url = 'https://cursemaven.com/'
+        }
     }
 }
