--- a/common/src/main/resources/assets/immersive_weathering/block_growths/frost_grass_snow.json
+++ b/common/src/main/resources/assets/immersive_weathering/block_growths/frost_grass_snow.json
@@ -10,10 +10,7 @@
         {
           "data": {
             "block": {
-              "Name": "immersive_weathering:frosty_grass",
-              "Properties": {
-                "half": "lower"
-              }
+              "Name": "immersive_weathering:frosty_grass"
             }
           },
           "weight": 1
