--- a/common/build.gradle
+++ b/common/build.gradle
@@ -26,8 +26,8 @@ publishing {
     repositories {
         // Add repositories to publish to here.
         maven {
-            name = 'Curse Maven'
-            url = 'https://cursemaven.com/'
+            url = "https://www.cursemaven.com"
+            allowInsecureProtocol = true
         }
     }
 }
