--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -25,7 +25,7 @@ dependencies {
     // Remove the next line if you don't want to depend on the API
     // modApi "dev.architectury:architectury-fabric:${rootProject.architectury_version}"
 
-    implementation fg.deobf("curse.maven:cloth-config-348521:3782775")
+    //implementation fg.deobf("curse.maven:cloth-config-348521:3782775")
 
 
     common(project(path: ":common", configuration: "namedElements")) { transitive false }
@@ -81,5 +81,9 @@ publishing {
     // See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
     repositories {
         // Add repositories to publish to here.
+        maven {
+            url = "https://www.cursemaven.com"
+            allowInsecureProtocol = true
+        }
     }
 }
