--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -85,8 +85,8 @@ publishing {
     repositories {
         // Add repositories to publish to here.
         maven {
-            name = 'Curse Maven'
-            url = 'https://cursemaven.com/'
+            url = "https://www.cursemaven.com"
+            allowInsecureProtocol = true
         }
     }
 }
