--- a/common/src/main/resources/assets/immersive_weathering/block_growths/thin_ice_snow.json
+++ b/common/src/main/resources/assets/immersive_weathering/block_growths/thin_ice_snow.json
@@ -8,7 +8,7 @@
       "biomes": [
         "#immersive_weathering:icy"
       ],
-      "predicate_type": "biome_match"
+     "type": "biome_match"
     }
   ],
   "growth_for_face": [
