--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -26,7 +26,9 @@ dependencies {
     // modApi "dev.architectury:architectury-fabric:${rootProject.architectury_version}"
 
     //implementation fg.deobf("curse.maven:cloth-config-348521:3782775")
-
+    modImplementation(include("me.shedaniel.cloth:cloth-config-fabric:${project.cloth_version}")) {
+        exclude group: 'net.fabricmc.fabric-api'
+    }
 
     common(project(path: ":common", configuration: "namedElements")) { transitive false }
     shadowCommon(project(path: ":common", configuration: "transformProductionFabric")) { transitive false }
