--- a/common/build.gradle
+++ b/common/build.gradle
@@ -29,5 +29,16 @@ publishing {
             url = "https://www.cursemaven.com"
             allowInsecureProtocol = true
         }
+        maven {
+            url = "https://www.cursemaven.com"
+            allowInsecureProtocol = true
+        }
+        maven {
+            name = "TerraformersMC"
+            url = "https://maven.terraformersmc.com/releases"
+        }
+        maven {
+            url = "https://maven.shedaniel.me"
+        }
     }
 }
