--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -29,6 +29,8 @@ dependencies {
     modImplementation(include("me.shedaniel.cloth:cloth-config-fabric:${project.cloth_version}")) {
         exclude group: 'net.fabricmc.fabric-api'
     }
+  // modImplementation(include("curse.maven:modmenu-308702:3850113"))
+    modImplementation(include("com.terraformersmc:modmenu:3.2.3"))
 
     common(project(path: ":common", configuration: "namedElements")) { transitive false }
     shadowCommon(project(path: ":common", configuration: "transformProductionFabric")) { transitive false }
@@ -87,5 +89,16 @@ publishing {
             url = "https://www.cursemaven.com"
             allowInsecureProtocol = true
         }
+        maven {
+            name = "TerraformersMC"
+            url = "https://maven.terraformersmc.com/releases"
+        }
+        maven {
+            url = "https://maven.shedaniel.me"
+        }
     }
+}
+repositories {
+    maven { url "https://maven.shedaniel.me/" }
+    maven { url "https://maven.terraformersmc.com/releases" }
 }
