--- a/forge/src/main/resources/META-INF/mods.toml
+++ b/forge/src/main/resources/META-INF/mods.toml
@@ -3,11 +3,14 @@ loaderVersion = "[40,)"
 #issueTrackerURL = ""
 license = "Insert License Here"
 
+
 [[mods]]
 modId = "immersive_weathering"
 version = "${version}"
 displayName = "Immersive Weathering"
 authors = "Me!"
+
+logoFile="assets/immersive_weathering/icon.png" #optional
 description = '''
 This is an example description! Tell everyone what your mod is about!
 '''
