--- a/common/src/main/resources/data/immersive_weathering/block_growths/frost_grass_snow.json
+++ b/common/src/main/resources/data/immersive_weathering/block_growths/frost_grass_snow.json
@@ -2,6 +2,13 @@
   "tick_sources": "snow",
   "growth_chance": 0.05,
   "target_self": true,
+  "area_condition": {
+    "must_have": {
+      "block": "minecraft:air",
+      "predicate_type": "minecraft:block_match"
+    },
+    "type": "neighbor_based_generation"
+  },
   "growth_for_face": [
     {
       "direction": "up",
